--- a/tourism.html
+++ b/tourism.html
@@ -32,7 +32,7 @@
             </div>
             <div class="grid-text-left">
                 <h2>Lodging:</h2>
-                <p>Taniti has a wide variety of lodging that ranges from an inexpensive hostel to one large, four-star resort. There are many small, family-owned hotels and a growing number of bed and breakfasts. All types of lodging are strictly regulated and regularly inspected by the Tanitian government.</p>
+                <p>Taniti has a wide variety of lodging that ranges from an inexpensive hostel to one large, four-star resort. There are many small, family-owned hotels and a growing number of bed and breakfasts.<br><br>All types of lodging are strictly regulated and regularly inspected by the Tanitian government.</p>
             </div>
             <div class="fade-img-right">
                 <img src="lodging-resort.jpg">
@@ -42,11 +42,11 @@
             </div>
             <div class="grid-text-right">
                 <h2>Entertainment:</h2>
-                <p>Most people visit Taniti to enjoy the beaches, explore the rainforest, and to visit the volcano. However, there are other things to do, including visiting a local history museum, going on chartered fishing tours, snorkeling, zip-lining in the rainforest, visiting several pubs, including a microbrewery, dancing at a new dance club, seeing a movie, taking helicopter rides, playing at an arcade, visiting art galleries, and bowling. Also, a nine-hole golf course should be operational by next year. Many of these activities are located in Merriton Landing, which is a rapidly developing area on the north side of Yellow Leaf Bay.</p>
+                <p>Most people visit Taniti to enjoy the beaches, explore the rainforest, and to visit the volcano. However, there are other things to do, including visiting a local history museum, going on chartered fishing tours, snorkeling, zip-lining in the rainforest, visiting several pubs, including a microbrewery, dancing at a new dance club, seeing a movie, taking helicopter rides, playing at an arcade, visiting art galleries, and bowling. Also, a nine-hole golf course should be operational by next year.<br><br>Many of these activities are located in Merriton Landing, which is a rapidly developing area on the north side of Yellow Leaf Bay.</p>
             </div>
             <div class="grid-text-left">
                 <h2>Sightseeing:</h2>
-                <p>Most tourists spend most of their time in Taniti City, which boasts native architecture and nearby white, sandy beaches that encircle Yellow Leaf Bay. Other popular activities include boat or bus tours of the island, hikes in the rainforest, or visits to Taniti&apos;s active volcano.</p>
+                <p>Most tourists spend most of their time in Taniti City, which boasts native architecture and nearby white, sandy beaches that encircle Yellow Leaf Bay.<br><br>Other popular activities include boat or bus tours of the island, hikes in the rainforest, or visits to Taniti&apos;s active volcano.</p>
             </div>
             <div class="fade-img-right">
                 <img src="sightseeing-beach.jpg">
@@ -56,11 +56,11 @@
             </div>
             <div class="grid-text-right">
                 <h2>Transportation:</h2>
-                <p>Almost all visitors arrive to Taniti by air, though some arrive on a small cruise ship that docks in Yellow Leaf Bay for one night per week. Taniti is served by a small airport that can accommodate small jets and propeller planes. Taniti is in the process of expanding the airport so larger jets will be able to land on the island within the next few years.</p>
+                <p>Almost all visitors arrive to Taniti by air, though some arrive on a small cruise ship that docks in Yellow Leaf Bay for one night per week.<br><br>Taniti is served by a small airport that can accommodate small jets and propeller planes.<br><br>Taniti is in the process of expanding the airport so larger jets will be able to land on the island within the next few years.</p>
             </div>
             <div class="grid-text-left">
                 <h2>Ground Transportation:</h2>
-                <p>Public buses serve Taniti City and run from 5 a.m. to 11 p.m. every day. Private buses serve the rest of the island. Taxis are available in Taniti City, and rental cars can be rented from a local rental agency near the airport. Bikes and helmets are available to rent from several vendors (helmets are required by law). Taniti City is fairly flat and very walkable. Many tourists stay in the area surrounding Merriton Landing: this area is easy to explore on foot.</p>
+                <p>Public buses serve Taniti City and run from 5 a.m. to 11 p.m. every day. Private buses serve the rest of the island.<br><br>Taxis are available in Taniti City, and rental cars can be rented from a local rental agency near the airport.<br><br>Bikes and helmets are available to rent from several vendors (helmets are required by law). <br><br>Taniti City is fairly flat and very walkable. Many tourists stay in the area surrounding Merriton Landing: this area is easy to explore on foot.</p>
             </div>
             <div class="fade-img-right">
                 <img src="ground-transportation-bus.jpg">
